# xiaomi-auto-unlock

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: deviceid.rs  logger.rs  main.rs  network.rs
ui/: main.slint  material.slint  theme.slint
