[package]
name = "micommunity"
version = "0.1.0"
edition = "2024"
authors = ["n4n4m", "wwingsy", "TheReallyPeredoZ"]
license = "AGPL-3.0"

[dependencies]
slint = { version = "1.11.0", default-features = false, features = ["renderer-skia", "backend-winit", "compat-1-2"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = { version = "0.4", features = ["serde"] }
sha1 = "0.10.6"
rand = "0.9.1"
once_cell = "1.16"
tokio = { version = "1", features = ["full"] }
surge-ping = "0.8.2"
sntpc = { version = "0.5.2", features = ["sync"] }
chrono-tz = "0.10.3"
open = "5.3.2"
serde_json = "1.0.140"

[build-dependencies]
slint-build = "1.11.0"
